# vbs-enclave-rs

./: .gitignore  Cargo.toml  README.md
sample/: Cargo.toml  README.md  build.rs
sample/.cargo/: config.toml
sample/EnclaveLoader/: EnclaveLoader.vcxproj  Main.cpp
sample/SampleHost/: Main.cpp  SampleHost.sln  SampleHost.vcxproj
sample/src/: bcrypt.rs  ffi.rs  lib.rs  params.rs
src/: allocator.rs  enclaveapi.rs  errhandlingapi.rs  error.rs  lib.rs  types.rs  winenclave.rs
