[package]
name = "sample-vbs-enclave-rs"
version = "0.2.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[lib]
crate-type = ["cdylib"]
test = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
vbs-enclave = { path = ".." }
hex-literal = "0.4.1"
spin = "0.9.8"

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_System_Environment",
    "Win32_Security_Cryptography",
    "Win32_Foundation"
]